<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@mipmap/ic_launcher_foreground3"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412">

        <TextView
            android:id="@+id/splash_lbl_login"
            android:layout_width="118dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:hint="@string/login_login"
            android:text="@string/login_login"
            android:textColor="#090909"
            android:textSize="36sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/splash_txt_username"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:autoText="false"
            android:background="@drawable/custom_buttons"
            android:ems="10"
            android:freezesText="false"
            android:hint="@string/login_username"
            android:inputType="textPersonName"
            android:textAllCaps="true"
            android:textColor="#131212"

            android:textColorHint="#FFFFFF"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/splash_txt_password"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:background="@drawable/custom_buttons"
            android:ems="10"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="80dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/splash_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/color_signIn"
                android:hint="@string/login_signin"
                android:text="@string/login_signin" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:visibility="invisible" />

            <Button
                android:id="@+id/splash_btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/color_cancel"
                android:hint="@string/login_cancel"
                android:text="@string/login_cancel" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>